--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -6,9 +6,9 @@
 <table class="table table-striped col-md-12" id="movies">
   <thead>
     <tr>
-      <th><%= link_to "Movie Title", :sort => "title"%></th>
+      <th id="title" class=<%= @css_title %>><%= link_to "Movie Title", :sort => "title" %></th>
       <th>Rating</th>
-      <th><%= link_to "Release Date", :sort => "release_date"%></th>
+      <th id="release_date" class=<%= @css_release_date %>><%= link_to "Release Date", :sort => "release_date" %></th>
       <th>More Info</th>
     </tr>
   </thead>
